--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yargs-reference",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "A tool to generate a command line reference from a yargs powered cli",
   "bin": {
     "yargs-reference": "bin/cli.js"
   },
