--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yargs-reference",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A tool to generate a command line reference from a yargs powered cli",
   "bin": {
     "yargs-reference": "bin/cli.js"
@@ -9,6 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:generate": "yargs-reference --overwrite --quiet && yargs-reference --overwrite --output html --quiet"
   },
+  "keywords": [
+    "docs",
+    "cli",
+    "reference",
+    "yargs",
+    "markdown",
+    "md",
+    "generator",
+    "generate"
+  ],
   "main": "index.js",
   "author": "dominicporteous <dominic@dom.gs>",
   "license": "MIT",
